--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "chalk": "^2.4.2",
     "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
