--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^6.0.0",
+    "gulp-less": "^4.0.1",
     "gulp-live-server": "0.0.30",
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.1.0",
